--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ body {
 main {
   padding: 50px 0;
   width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -75,7 +76,7 @@ main {
 .main__description{
   font-size: 20px;
   color: var(--white);
-  width: 600px;
+  margin: 20px 25%;
   text-align: justify;
 }
 
@@ -120,10 +121,16 @@ main {
 
 /* MEDIA QUERYS */
 /* Extra small */
-@media screen and (max-width: 576px){}
+@media screen and (max-width: 576px){
+  .main__description{
+    margin: 20px 10%;
+  }
+}
 
 /* small */
-@media (min-width: 577px) and (max-width: 767px){}
+@media (min-width: 577px) and (max-width: 767px){
+
+}
 
 /* Medium */
 @media (min-width: 769px) and (max-width: 992px){
