--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
   --yellow: #f9e53b;
   --black: #000;
   --white: #fff;
+  --grey: #787979;
 }
 
 body {
@@ -30,10 +31,75 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-*,*::after,*::before{
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
+/* menu */
+nav {
+  position: fixed;
+  right: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+.menu {
+  list-style: none;
+  padding: 0;
+}
+
+.menu__item {
+  padding: 10px 0;
+  text-align: right;
+  font-size: 20px;
+}
+
+.menu__item a{
+  text-decoration: none;
+  color: var(--grey);
+  cursor: pointer;
+}
+
+.menu__item a:hover,.menu__item a:focus{
+  color: var(--white);
+}
+
+.menu__item a:hover .menu__item-marker,
+.menu__item a:hover .menu__item-marker::after{
+  background-color: var(--white);
+}
+
+.menu__item--active a{
+  color: var(--white);
+}
+
+.menu__item--active .menu__item-marker,
+.menu__item--active .menu__item-marker::after{
+  background-color: var(--white);
+}
+
+.menu__item-marker {
+  display: inline-block;
+  height: 12px;
+  width: 12px;
+  background-color: var(--grey);
+  border-radius: 50%;
+  margin: 0 10px;
+}
+
+.menu__item-marker::after {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 20px;
+  background-color: var(--grey);
+  transform: translateX(6px) translateY(18px);
+}
+
+/* Main */
 main {
   padding: 50px 0;
   width: 100%;
@@ -63,7 +129,7 @@ main {
 
 .main__line {
   width: 100px;
-  border: 1px solid #797979;
+  border: 1px solid var(--grey);
 }
 
 .main__ocupation {
@@ -73,46 +139,46 @@ main {
   margin: 0;
 }
 
-.main__description{
-  font-size: 20px;
+.main__description {
+  font-size: 18px;
   color: var(--white);
-  margin: 20px 25%;
+  margin: 15px 25%;
   text-align: justify;
 }
 
-.icons{
+.icons {
   font-size: 40px;
   width: 300px;
   display: flex;
   justify-content: space-between;
 }
 
-.icons__html{
+.icons__html {
   color: var(--red);
 }
 
-.icons__css{
+.icons__css {
   color: var(--strongBlue);
 }
 
-.icons__js{
+.icons__js {
   color: var(--yellow);
 }
 
-.icons__react{
+.icons__react {
   color: var(--blue);
 }
 
-.icons__sass{
+.icons__sass {
   color: var(--pink);
 }
 
-.icons__git{
+.icons__git {
   color: var(--orange);
 }
 
 /* Shapes */
-.shapes{
+.shapes {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -121,35 +187,30 @@ main {
 
 /* MEDIA QUERYS */
 /* Extra small */
-@media screen and (max-width: 576px){
-  .main__description{
+@media screen and (max-width: 576px) {
+  .main__description {
     margin: 20px 10%;
   }
-  .main__name{
+  .main__name {
     font-size: 50px;
   }
 }
 
 /* small */
-@media (min-width: 577px) and (max-width: 767px){
-
+@media (min-width: 577px) and (max-width: 767px) {
 }
 
 /* Medium */
-@media (min-width: 769px) and (max-width: 992px){
-    
+@media (min-width: 769px) and (max-width: 992px) {
 }
 /* Large */
-@media (min-width: 993px) and (max-width: 1200px){
-    
+@media (min-width: 993px) and (max-width: 1200px) {
 }
 /* Extra large */
-@media (min-width: 1200px){
-    
+@media (min-width: 1200px) {
 }
 
 /* Scroll */
-
 body::-webkit-scrollbar {
   width: 15px;
 }
