--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ body {
   box-sizing: border-box;
 }
 
+.no-pointer{
+  pointer-events: none;
+}
+
 /* menu */
 nav {
   position: fixed;
@@ -57,27 +61,28 @@ nav {
   font-size: 20px;
 }
 
-.menu__item a{
+.menu__item a {
   text-decoration: none;
   color: var(--grey);
   cursor: pointer;
 }
 
-.menu__item a:hover,.menu__item a:focus{
+.menu__item a:hover,
+.menu__item a:focus {
   color: var(--white);
 }
 
 .menu__item a:hover .menu__item-marker,
-.menu__item a:hover .menu__item-marker::after{
+.menu__item a:hover .menu__item-marker::after {
   background-color: var(--white);
 }
 
-.menu__item--active a{
+.menu__item--active a {
   color: var(--white);
 }
 
 .menu__item--active .menu__item-marker,
-.menu__item--active .menu__item-marker::after{
+.menu__item--active .menu__item-marker::after {
   background-color: var(--white);
 }
 
@@ -108,6 +113,8 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: url(../assets/bg1.png);
+  background-size: cover;
 }
 
 .main__logo {
