--- a/css/style.css
+++ b/css/style.css
@@ -108,13 +108,16 @@ nav {
 
 .btnmenu__square{
   display: block;
+  width: 50px;
+  height: 10px;
+  background-color: var(--white);
 }
 
-.btnmenu__square1{}
+.btnmenu__square--1{}
 
-.btnmenu__square2{}
+.btnmenu__square--2{}
 
-.btnmenu__square3{}
+.btnmenu__square--3{}
 
 /* Main */
 main {
