--- a/css/style.css
+++ b/css/style.css
@@ -104,13 +104,20 @@ nav {
   transform: translateX(6px) translateY(18px);
 }
 
-.btnmenu{}
+.btnmenu{
+  position: fixed;
+  left: 10px;
+  top: 10px;
+  background: none;
+  border: none;
+}
 
 .btnmenu__square{
   display: block;
-  width: 50px;
-  height: 10px;
+  width: 40px;
+  height: 5px;
   background-color: var(--white);
+  margin-top: 3px;
 }
 
 .btnmenu__square--1{}
