show btn menu only in responsive

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ nav {
 }
 
 .btnmenu{
+  display: none;
   position: fixed;
   left: 10px;
   top: 10px;
@@ -222,6 +223,9 @@ main {
   }
   .main__name {
     font-size: 50px;
+  }
+  .btnmenu{
+    display: block;
   }
 }
 
