--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,11 @@ body {
 }
 
 .no-show {
-  display: none;
+  display: none !important;
+}
+
+.no-margin {
+  margin: 0;
 }
 
 /* menu */
@@ -260,13 +264,78 @@ main {
   padding: 20px;
   border-radius: 5px;
   box-shadow: -1px 3px 5px 0px rgba(0, 0, 0, 0.75);
+  overflow: hidden;
 }
 
 .project__picture {
   object-fit: contain;
   margin: 10px 0;
   width: 100%;
-  height: 200px;
+  height: 220px;
+}
+
+.project__commingsoon {
+  background-color: rgba(0, 0, 0, 0.76);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.project_commingsoon__text {
+  font-size: 25px;
+  background: -webkit-linear-gradient(var(--red), var(--yellow));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.project__information {
+  background-color: rgba(0, 0, 0, 0.76);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  transform: translateY(100%);
+  transition: 300ms;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+  padding: 10px;
+}
+
+.projects__item:hover > .project__information {
+  transform: translateY(0);
+}
+
+.project__title--dailifity {
+  color: #ba5eee;
+}
+
+.project__description {
+  margin: 10px 0;
+}
+
+.project__btn {
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  cursor: pointer;
+  background: linear-gradient(
+    160deg,
+    #ba5eee,
+    #8f67e7,
+    #656bda,
+    #3e6ac8,
+    #3f5aa9,
+    #4b3f81,
+    #47255b,
+    #3a0e37
+  );
 }
 
 /* Shapes */
@@ -295,7 +364,7 @@ main {
   .menu {
     display: none;
   }
-  .projects__item{
+  .projects__item {
     margin: 20px 0;
   }
 }
