--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,47 @@ main {
   color: var(--white);
 }
 
+.contact__container {
+  width: 75%;
+  height: 60vh;
+  margin: auto;
+  padding: 100px 0;
+  background-image: url(../assets/bgform.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+.contact__icon {
+  color: var(--white);
+  font-size: 80px;
+  transition: 300ms;
+}
+
+.contact__icon:hover,
+.contact__icon:focus {
+  font-size: 100px;
+}
+
+.contact__iconlist {
+  list-style: none;
+  padding: 0;
+  width: 80%;
+  margin-left: 10%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.contact__text {
+  font-size: 25px;
+  color: var(--white);
+}
+
+.contact__email {
+  text-decoration: none;
+  color: var(--yellow);
+}
+
 /* Shapes */
 .shapes {
   position: absolute;
@@ -377,6 +418,28 @@ main {
   }
   .projects__item {
     margin: 20px 0;
+  }
+  .projects {
+    height: auto;
+  }
+  .contact__container {
+    background-size: 100% 100%;
+    height: 35vh;
+    padding: 50px 20px;
+  }
+  .contact__icon {
+    font-size: 40px;
+  }
+  .contact__text {
+    font-size: 16px;
+  }
+  .contact__iconlist {
+    width: 100%;
+    margin-left: 0;
+  }
+  .contact__icon:hover,
+  .contact__icon:focus {
+    font-size: 50px;
   }
 }
 
