--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,8 @@ main {
   }
   .contact__container {
     background-size: 100% 100%;
-    height: 35vh;
+    width: 85%;
+    height: 45vh;
     padding: 50px 20px;
   }
   .contact__icon {
