--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@ body {
   background-size: cover;
   background: url(../assets/bg1.png), rgba(24, 29, 30, 1);
   font-family: 'Roboto', sans-serif;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  /* overflow-x: hidden;
+  overflow-y: hidden; */
 }
 
 *,
@@ -251,11 +251,11 @@ main {
 }
 
 /* Projects */
-.projects {
+/* .projects {
   height: 100vh;
   display: flex;
   flex-direction: column;
-}
+} */
 
 .projects__title {
   text-align: end;
@@ -357,15 +357,19 @@ main {
   );
 }
 
-.project__wip{
+.project__wip {
   color: var(--orange);
 }
 
 /* Contact */
-.contact {
+/* .contact {
   height: 100vh;
   display: flex;
   flex-direction: column;
+} */
+
+.contact {
+  margin-bottom: 100px;
 }
 
 .contact__title {
@@ -432,7 +436,7 @@ main {
 /* MEDIA QUERYS */
 /* Extra small */
 @media screen and (max-width: 576px) {
-  body{
+  body {
     overflow-y: auto;
   }
   nav {
@@ -497,7 +501,7 @@ main {
 }
 
 /* preloader */
-.preloader{
+.preloader {
   position: fixed;
   z-index: 11;
   height: 100vh;
@@ -505,7 +509,7 @@ main {
   display: flex;
   justify-content: center;
 }
-.preloader__text{
+.preloader__text {
   position: fixed;
   font-size: 35px;
   z-index: 12;
@@ -514,7 +518,7 @@ main {
   color: var(--white);
 }
 
-canvas{
+canvas {
   background-color: red;
 }
 
@@ -530,4 +534,33 @@ canvas{
 }
 /* Extra large */
 @media (min-width: 1200px) {
+}
+
+/* SCROLL */
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  /* background: #00baf5;  */
+  background: url(../assets/bar.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  /* border-radius: 10px; */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  /* background: #00baf5;  */
+  background: url(../assets/bar.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
